# memcp

./: .env.example  .gitignore  DISPLAY_ARCHITECTURE.md  README.md  TODO.md  config.toml  cursor_rules.md  graphiti_mcp_server.py  llm_client_conag_output.md  mcp_config_stdio_example.json  memcp_server.py  new_pydantic_fixes.md  new_todo.md  old_graphiti_mcp_server.py  old_refactoring_plan.md  orignal_pydantic_fixes.md  phase_5.md  project_coding_conventions.md  prompt.md  prompt_caching.md  pydantic_settings.md  pyproject.toml  pyproject_inprogress.toml  queue_adapter.py  queue_progress_display.py  queue_progress_example.py  queue_stats.py  refactor_plan.md  rich_display_implementation.md  temp.md  temp.py  template_plan.md
memcp/: app_builder.py  app_factory.py  cli.py  config.toml  main.py  memcp_typings.py  py.typed
memcp/api/: __init__.py  api_errors.py  graphiti_server.py  mcp_tools.py  memcp_server.py
memcp/cli/: __init__.py  create_server.py  runner.py
memcp/config/: __init__.py  config_manager.py  memcp_config.py  providers.py  server_config.py  settings.py  sources.py  utils.py
memcp/config/errors/: __init__.py  config_errors.py
memcp/config/models/: __init__.py  embeddings.py  graph.py  llm.py  mcp.py  neo4j.py  server.py
memcp/console/: __init__.py  display_manager.py  queue_display.py
memcp/core/queue/: __init__.py  manager.py  queue_manager.py  stats.py
memcp/llm/: __init__.py  llm_factory.py
memcp/models/: __init__.py  entities.py  responses.py
memcp/queue/: __init__.py  queue_errors.py  queue_manager.py  shutdown.py  stats.py
memcp/templates/: __init__.py
memcp/templates/defaults/: config.py
memcp/templates/instructions/: mcp_instructions.py
memcp/utils/: __init__.py  errors.py  logging.py  memcp_rich_theme.py  shutdown.py  uvicorn_config.py
zep_graphiti_issue/: issue.md  proposed_fix.py  proposed_test.py
